// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldName renders a geo field, useShortDots is set to true 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow dscFieldName dscFieldName--noResults"
>
  <div
    aria-label="Geo point field"
    data-euiicon-type="globe"
  />
  <span
    class="dscFieldName"
  >
    <span
      aria-label="Geo point field"
      class="euiToken euiToken--euiColorVis5 euiToken--square euiToken--light euiToken--small kbnFieldIcon"
      title="Geo point field"
    >
      <svg
        aria-hidden="true"
        class="euiIcon euiIcon--medium euiIcon-isLoading"
        focusable="false"
        height="16"
        role="img"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      />
    </span>
  </div>
  <div
    class="euiFlexItem eui-textTruncate"
  >
    <span
      class="euiToolTipAnchor eui-textTruncate"
    >
      <span>
        t.t.test
      </span>
    </span>
  </div>
</div>
`;

exports[`FieldName renders a number field by providing a field record, useShortDots is set to false 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow dscFieldName"
>
  <div
    aria-label="Number field"
    data-euiicon-type="number"
  />
  <span
    class="dscFieldName"
  >
    <span
      class="euiToolTipAnchor eui-textTruncate"
    >
      <span>
        test.test.test
      </span>
    </span>
  </div>
</div>
`;

exports[`FieldName renders a string field by providing fieldType and fieldName 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow dscFieldName"
>
  <div
    aria-label="String field"
    data-euiicon-type="string"
  />
  <span
    class="dscFieldName"
  >
    <span
      class="euiToolTipAnchor eui-textTruncate"
    >
      <span>
        test
      </span>
    </span>
  </div>
</div>
`;
